Added few tests and updated swagger
